# web-agent_project_dump

./: .gitignore  CMakeLists.txt  README.md  config.json
include/: TaskExecutor.h  agent.h  config.h  logger.h  network.h
src/: TaskExecutor.cpp  agent.cpp  config.cpp  logger.cpp  main.cpp  network.cpp
tests/: CMakeLists.txt  test_config.cpp  test_network.cpp  test_web-agent.cpp
